<resources>
    <string name="app_name">Cricket Scorebook</string>
    <string name="title_play">Play</string>
    <string name="title_history">History</string>
    <string name="teams">Teams</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="batting">Batting</string>
    <string name="opted_to">Opted to?</string>
    <string name="bat">Bat</string>
    <string name="bowl">Bowl</string>
    <string name="overs">Overs?</string>
    <string name="default_over">10</string>
    <string name="start_match">Start Match</string>
    <string name="this_over">This Over</string>
    <string name="date">Date</string>
    <string name="quit">Quit</string>
    <string name="clear">Clear</string>
    <string name="empty_history">There is No History Found</string>
</resources>
