<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.play.PlayFragment">

        <TextView
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/teams"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_heading__text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="@dimen/default_padding"
                android:paddingEnd="16dp"
                android:paddingBottom="@dimen/default_padding">

                <EditText
                    android:id="@+id/et_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_a"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/team_b"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/et_team_a" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/toss_won_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/batting"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_heading__text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_teams" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_batting_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toss_won_by">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="@dimen/default_padding"
                android:paddingEnd="16dp"
                android:paddingBottom="@dimen/default_padding">

                <RadioGroup
                    android:id="@+id/rg_batting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rb_team_a"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/team_a"
                        android:textSize="@dimen/default_text_size" />

                    <RadioButton
                        android:id="@+id/rb_team_b"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/team_b"
                        android:textSize="@dimen/default_text_size" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/overs"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_heading__text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_batting_team" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_overs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/over">

            <EditText
                android:id="@+id/et_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="@dimen/default_padding"
                android:hint="@string/default_over"
                android:inputType="number"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_start_match"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:background="@drawable/layout_bg"
            android:text="@string/start_match"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cd_overs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
