<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_team_a_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:elevation="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_team_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@string/team_a"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/team_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="0 - 0"
                    android:textSize="@dimen/score_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_team_a" />

                <TextView
                    android:id="@+id/tv_team_a_overs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:paddingTop="@dimen/default_padding"
                    android:text="(0.0)"
                    android:textSize="@dimen/over_text_size"
                    app:layout_constraintStart_toEndOf="@id/tv_team_a_score"
                    app:layout_constraintTop_toBottomOf="@id/tv_team_a" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_score_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/cd_team_a_score">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/tv_batting_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@string/team_a"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/team_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_batting_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="0 - 0"
                    android:textSize="@dimen/score_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_batting_team" />

                <TextView
                    android:id="@+id/tv_bowling_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:paddingTop="@dimen/default_padding"
                    android:text="(0.0)"
                    android:textSize="@dimen/over_text_size"
                    app:layout_constraintStart_toEndOf="@id/tv_batting_score"
                    app:layout_constraintTop_toBottomOf="@id/tv_batting_team" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_to_win_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:elevation="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/cd_score_board">

            <TextView
                android:id="@+id/tv_to_win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:paddingStart="@dimen/default_padding"
                android:paddingEnd="@dimen/default_padding"
                android:text="Team-B needs 0 in 0 balls"
                android:textSize="@dimen/team_text_size" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_this_over"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cd_to_win_board">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin">

                <TextView
                    android:id="@+id/tv_this"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/this_over"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/team_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_this_over_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="16dp"
                    android:textSize="@dimen/team_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_this" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_score_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/cd_this_over">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding">

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="DOT"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_dot"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_one"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_two"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="Four"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_three"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_six"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="SIX"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_one" />

                <Button
                    android:id="@+id/btn_wide"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="WIDE"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_six"
                    app:layout_constraintTop_toBottomOf="@id/btn_one" />

                <Button
                    android:id="@+id/btn_no_ball"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="NO BALL"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_wide"
                    app:layout_constraintTop_toBottomOf="@id/btn_one" />

                <Button
                    android:id="@+id/btn_out"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="OUT"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_no_ball"
                    app:layout_constraintTop_toBottomOf="@id/btn_one" />

                <Button
                    android:id="@+id/btn_undo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@drawable/layout_bg"
                    android:text="UNDO"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_out"
                    app:layout_constraintTop_toBottomOf="@id/btn_one" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:background="@drawable/layout_bg"
            android:text="@string/quit"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>